// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuditPanel > renders the full panel tree for the happy path 1`] = `
<aside
  aria-describedby="audit-panel-title"
  aria-label="Event detail"
  aria-modal="true"
  class="audit-panel"
  role="dialog"
>
  <button
    aria-label="Close"
    class="panel-close"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
  <section
    class="panel-block panel-block--hero"
  >
    <div
      class="panel-eyebrow"
    >
      Event
    </div>
    <div
      class="panel-badges"
    >
      <button
        class="outcome outcome--success outcome--button"
        type="button"
      >
        <span
          aria-hidden="true"
          class="outcome-dot"
        />
        success
      </button>
    </div>
    <p
      class="panel-sentence"
      id="audit-panel-title"
    >
      alice@example.com signed in.
    </p>
    <div
      class="panel-when"
    >
      <div
        class="panel-when-primary"
      >
        <span
          class="d"
        >
          Apr 1, 2026
        </span>
        <span
          class="t"
        >
          02:00:00 PM
        </span>
        <span
          class="tz"
        >
          Europe/Luxembourg
        </span>
      </div>
      <div
        class="panel-when-secondary"
      >
        last month
      </div>
    </div>
  </section>
  <section
    class="panel-block panel-block--actions"
  >
    <div
      class="panel-actions"
    >
      <button
        class="panel-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
        >
          <rect
            height="13"
            rx="2"
            width="13"
            x="9"
            y="9"
          />
          <path
            d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
          />
        </svg>
        Copy link
      </button>
      <button
        class="panel-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
        >
          <rect
            height="13"
            rx="2"
            width="13"
            x="9"
            y="9"
          />
          <path
            d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
          />
        </svg>
        Copy data
      </button>
      <button
        class="panel-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
        Export data
      </button>
    </div>
  </section>
  <section
    class="panel-block panel-block--section"
  >
    <h4
      class="panel-heading"
    >
      Participants
    </h4>
    <dl
      class="panel-facts"
    >
      <dt>
        Actor
      </dt>
      <dd>
        <a
          class="panel-fact-link"
          href="?actor=alice%40example.com"
        >
          alice@example.com
        </a>
      </dd>
      <dt>
        Client
      </dt>
      <dd>
        <a
          class="panel-fact-link"
          href="?target_type=client&target_id=client-1"
        >
          Grafana
        </a>
      </dd>
      <dt>
        Target type
      </dt>
      <dd>
        <a
          class="panel-fact-link"
          href="?target_type=client"
        >
          Client
        </a>
      </dd>
      <dt>
        From IP
      </dt>
      <dd>
        127.0.0.1
      </dd>
    </dl>
  </section>
  <section
    class="panel-block panel-block--tech"
  >
    <h4
      class="panel-heading"
    >
      Technical details
    </h4>
    <dl
      class="panel-tech-row"
    >
      <dt>
        Event ID
      </dt>
      <dd>
        evt-snap-happy
      </dd>
    </dl>
    <dl
      class="panel-tech-row"
    >
      <dt>
        Event type
      </dt>
      <dd>
        <a
          class="panel-fact-link"
          href="?event_types=login.succeeded"
        >
          login.succeeded
        </a>
      </dd>
    </dl>
    <dl
      class="panel-tech-row"
    >
      <dt>
        Actor ID
      </dt>
      <dd>
        user-1
      </dd>
    </dl>
    <dl
      class="panel-tech-row"
    >
      <dt>
        Target ID
      </dt>
      <dd>
        <a
          class="panel-fact-link"
          href="?target_type=client&target_id=client-1"
        >
          client-1
        </a>
      </dd>
    </dl>
    <dl
      class="panel-tech-row"
    >
      <dt>
        Recorded at
      </dt>
      <dd>
        April 1, 2026 at 2:00:00 PM GMT+2
      </dd>
    </dl>
  </section>
</aside>
`;

exports[`AuditPanel > snapshots the actor filter link cell 1`] = `
<a
  class="panel-fact-link"
  href="?actor=alice%40example.com"
>
  alice@example.com
</a>
`;

exports[`AuditPanel > snapshots the event type filter link cell 1`] = `
<a
  class="panel-fact-link"
  href="?event_types=login.succeeded"
>
  login.succeeded
</a>
`;

exports[`AuditPanel > snapshots the null target cell 1`] = `
<dd>
  <span
    class="is-system"
  >
    Audit log
  </span>
</dd>
`;

exports[`AuditPanel > snapshots the outcome filter badge 1`] = `
<button
  class="outcome outcome--denied outcome--button"
  type="button"
>
  <span
    aria-hidden="true"
    class="outcome-dot"
  />
  denied
</button>
`;

exports[`AuditPanel > snapshots the target filter link cell 1`] = `
<a
  class="panel-fact-link"
  href="?target_type=client&target_id=client-1"
>
  Grafana
</a>
`;
